[package]
name = "leonard-os"
version = "0.0.0"
authors = ["Gabriel Conrado <gabaconrado@gmail.com>", "Pedro <pedrosmv@gmail.com"]
edition = "2018"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic


[dependencies]
