[package]
name = "leonard-os"
version = "0.0.0"
authors = ["Gabriel Conrado <gabaconrado@gmail.com>", "Pedro <pedrosmv@gmail.com"]
edition = "2018"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
rlibc = "1.0.0"
spin = "0.5.2"
x86_64 = "0.11.0"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300
